01/08/2023 Click event            	Toast and snackbar            	Intent

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,48 +9,90 @@
     <ImageView
         android:id="@+id/login_image"
         android:src="@drawable/login_image"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="50dp"
         android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
-    <EditText
+    <TextView
         android:id="@+id/main_internship"
         android:text="Internship"
         android:textColor="@color/white_trans"
-        android:textSize="35dp"
+        android:textSize="30dp"
         android:layout_marginTop="20dp"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/login_image"
         android:layout_width="wrap_content"
-        android:textColorHint="@color/white_trans"
         android:layout_height="wrap_content"/>
 
     <EditText
         android:id="@+id/main_emailid"
+        android:hint="Email Id"
+        android:drawableLeft="@drawable/image_emailid"
+        android:inputType="textEmailAddress"
         android:layout_below="@id/main_internship"
         android:layout_width="match_parent"
-        android:inputType="textEmailAddress"
-        android:hint="Email Id"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="20dp"
-        android:textSize="20dp"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white_trans"
-        android:layout_height="48dp"/>
+        android:layout_height="48dp"
+        style="@style/edittext_14"/>
 
     <EditText
         android:id="@+id/main_password"
+        android:hint="Password"
+        android:drawableLeft="@drawable/image_password"
+        android:inputType="textEmailAddress"
         android:layout_below="@id/main_emailid"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:hint="Password"
-        android:layout_marginHorizontal="20dp"
+        android:layout_height="48dp"
+        style="@style/edittext_14" />
+
+    <CheckBox
+        android:id="@+id/main_remember"
+        android:layout_below="@+id/main_password"
+        android:text="Remember me"
+        android:textColor="@color/white_trans"
+        app:buttonTint="@color/white_trans"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <Button
+        android:id="@+id/main_login"
+        android:layout_below="@+id/main_remember"
+        android:text="Log In"
         android:layout_marginTop="20dp"
+        android:textStyle="bold"
         android:textSize="20dp"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white_trans"
-        android:height="48dp"/>
+        android:textColor="#FEA387"
+        app:backgroundTint="@null"
+        android:background="@drawable/custom_button_login"
+        android:layout_marginHorizontal="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <Button
+        android:id="@+id/main_signup_button"
+        android:layout_below="@+id/main_login"
+        android:text="Sign up"
+        android:layout_marginTop="20dp"
+        android:textStyle="bold"
+        android:textSize="20dp"
+        android:textColor="@color/white_trans"
+        app:backgroundTint="@null"
+        android:background="@drawable/custom_button_signup"
+        android:layout_marginHorizontal="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <EditText
+        android:id="@+id/main_forgetpassword"
+        android:layout_below="@+id/main_signup_button"
+        android:text="Forget your password"
+        android:fontFamily="monospace"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:textColor="@color/white_trans"
+        android:layout_width="wrap_content"
+        android:layout_height="48dp"/>
 
 </RelativeLayout>
