--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,14 +10,14 @@
 
     <style name="Theme.Report" parent="Base.Theme.Report" />
 
-    <style name="edittext_16" parent="Widget.AppCompat.EditText">
-        <item name="android:layout_marginHorizontal">@dimen/_20sdp</item>
+    <style name="edittext_14" parent="Widget.AppCompat.EditText">
+        <item name="android:layout_marginHorizontal">20dp</item>
         <item name="android:background">@drawable/custom_border</item>
-        <item name="android:layout_marginTop">@dimen/_20sdp</item>
-        <item name="android:paddingHorizontal">@dimen/_10sdp</item>
-        <item name="android:paddingVertical">@dimen/_6sdp</item>
-        <item name="android:drawablePadding">@dimen/_5sdp</item>
-        <item name="android:textSize">@dimen/_14sdp</item>
+        <item name="android:layout_marginTop">20dp</item>
+        <item name="android:paddingHorizontal">10dp</item>
+        <item name="android:paddingVertical">6dp</item>
+        <item name="android:drawablePadding">5dp</item>
+        <item name="android:textSize">14dp</item>
         <item name="android:textColor">@color/white_trans</item>
         <item name="android:textColorHint">@color/white_trans</item>
     </style>
