--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -1,9 +1,141 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SignupActivity">
+    android:background="@drawable/custom_background"
+    tools:context=".MainActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <EditText
+            android:id="@+id/signup_name"
+            style="@style/edittext_16"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_30sdp"
+            android:drawableLeft="@drawable/image_username"
+            android:hint="Name"
+            android:inputType="textPersonName" />
+
+        <EditText
+            android:id="@+id/signup_email"
+            style="@style/edittext_16"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/signup_name"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:drawableLeft="@drawable/image_emailid"
+            android:hint="Email Id"
+            android:inputType="textEmailAddress" />
+
+        <EditText
+            android:id="@+id/signup_contact"
+            style="@style/edittext_16"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/signup_email"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:drawableLeft="@drawable/image_emailid"
+            android:hint="Contact No."
+            android:inputType="phone"
+            android:maxLength="10" />
+
+        <EditText
+            android:id="@+id/signup_password"
+            style="@style/edittext_16"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/signup_contact"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:drawableLeft="@drawable/image_password"
+            android:hint="Password"
+            android:inputType="textPassword" />
+
+
+        <EditText
+            android:id="@+id/signup_confirm_password"
+            style="@style/edittext_16"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/signup_password"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:drawableLeft="@drawable/image_password"
+            android:hint="Confirm Password"
+            android:inputType="textPassword" />
+
+        <RadioGroup
+            android:id="@+id/signup_gender"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/signup_confirm_password"
+            android:layout_marginHorizontal="@dimen/_20sdp"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:orientation="horizontal">
+
+            <RadioButton
+                android:id="@+id/signup_male"
+                style="@style/radio_16"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Male" />
+
+            <RadioButton
+                android:id="@+id/signup_female"
+                style="@style/radio_16"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Female" />
+
+        </RadioGroup>
+
+        <Spinner
+            android:popupBackground="@color/pink_red"
+            android:background="@color/white_trans"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:layout_marginHorizontal="@dimen/_20sdp"
+            android:layout_below="@id/signup_gender"
+            android:id="@+id/signup_city"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+        <EditText
+            android:editable="false"
+            android:id="@+id/signup_dob"
+            android:layout_below="@id/signup_city"
+            android:layout_width="match_parent"
+            android:focusable="false"
+            android:clickable="true"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:drawableLeft="@drawable/image_emailid"
+            android:hint="Date Of Birth"
+            android:inputType="textPersonName"
+            style="@style/edittext_16" />
+
+        <Button
+            android:id="@+id/signup_signup"
+            style="@style/button_16_white"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/signup_dob"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:text="Sign Up" />
+
+        <Button
+            android:id="@+id/signup_login"
+            style="@style/button_16_red"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/signup_signup"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:text="Log In" />
+
+    </RelativeLayout>
+
+</ScrollView>
