--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,16 +10,47 @@
 
     <style name="Theme.Report" parent="Base.Theme.Report" />
 
-    <style name="edittext_14" parent="Widget.AppCompat.EditText">
+    <style name="edittext_16" parent="Widget.AppCompat.EditText">
         <item name="android:layout_marginHorizontal">20dp</item>
         <item name="android:background">@drawable/custom_border</item>
         <item name="android:layout_marginTop">20dp</item>
         <item name="android:paddingHorizontal">10dp</item>
         <item name="android:paddingVertical">6dp</item>
         <item name="android:drawablePadding">5dp</item>
-        <item name="android:textSize">14dp</item>
+        <item name="android:textSize">16dp</item>
         <item name="android:textColor">@color/white_trans</item>
         <item name="android:textColorHint">@color/white_trans</item>
+    </style>
+    <style name="check_14" parent="Widget.AppCompat.CompoundButton.CheckBox">
+        <item name="android:textSize">@dimen/_14sdp</item>
+        <item name="android:textColor">@color/white_trans</item>
+        <item name="android:buttonTint">@color/white_trans</item>
+    </style>
+
+    <style name="button_16_white" parent="Widget.AppCompat.Button">
+        <item name="android:background">@drawable/custom_button_login</item>
+        <item name="android:layout_marginHorizontal">@dimen/_20sdp</item>
+        <item name="android:textColor">#FEA387</item>
+        <item name="android:textSize">@dimen/_16sdp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="backgroundTint">@null</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
+    <style name="button_16_red" parent="Widget.AppCompat.Button">
+        <item name="android:background">@drawable/custom_button_signup</item>
+        <item name="android:layout_marginHorizontal">@dimen/_20sdp</item>
+        <item name="android:textColor">@color/white_trans</item>
+        <item name="android:textSize">@dimen/_16sdp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="backgroundTint">@null</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
+    <style name="radio_16" parent="Widget.AppCompat.CompoundButton.RadioButton">
+        <item name="buttonTint">@color/white_trans</item>
+        <item name="android:textSize">@dimen/_16sdp</item>
+        <item name="android:textColor">@color/white_trans</item>
     </style>
 
 </resources>
